[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/PackedScenes/InteractionArea/InteractionArea.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.4, 0.7, 0.1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.8, 0.2, 0.15 )

[node name="InteractionArea" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="PlayerArea" type="Area" parent="."]
collision_mask = 2

[node name="LeftCatch" type="CollisionShape" parent="PlayerArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, -0.4, 0 )
shape = SubResource( 2 )
disabled = true

[node name="RightCatch" type="CollisionShape" parent="PlayerArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, -0.4, 0 )
shape = SubResource( 2 )
disabled = true

[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="PlayerArea" to="." method="_on_PlayerArea_body_entered"]
